FenicsPDE/MOND/jupyternbs/jitfailure-dolfin_expression_96e7f8c8c1c98d4f7d2d46287c861684/error.log
/tmp/tmpchp_jijv/dolfin_expression_96e7f8c8c1c98d4f7d2d46287c861684.cpp: In member function ‘virtual void dolfin::dolfin_expression_96e7f8c8c1c98d4f7d2d46287c861684::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpchp_jijv/dolfin_expression_96e7f8c8c1c98d4f7d2d46287c861684.cpp:80:150: error: expected ‘)’ before ‘;’ token
           values[0] = (pow(x[0]-position_x,2+pow(x[1]-position_y,2)+pow(x[2]-position_z,2))<=pow(radius_tot, 2) ?a0*4*pi*G*source_mass/volume_out : 0;
                                                                                                                                                      ^
/tmp/tmpchp_jijv/dolfin_expression_96e7f8c8c1c98d4f7d2d46287c861684.cpp: In member function ‘virtual double dolfin::dolfin_expression_96e7f8c8c1c98d4f7d2d46287c861684::get_property(std::__cxx11::string) const’:
/tmp/tmpchp_jijv/dolfin_expression_96e7f8c8c1c98d4f7d2d46287c861684.cpp:92:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "radius_close") return radius_close;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;          if (name == "position_x") return position_x;          if (name == "position_y") return position_y;          if (name == "position_z") return position_z;          if (name == "source_number") return source_number;          if (name == "source_mass") return source_mass;
           ^~
/tmp/tmpchp_jijv/dolfin_expression_96e7f8c8c1c98d4f7d2d46287c861684.cpp:92:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "radius_close") return radius_close;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;          if (name == "position_x") return position_x;          if (name == "position_y") return position_y;          if (name == "position_z") return position_z;          if (name == "source_number") return source_number;          if (name == "source_mass") return source_mass;
                                                 ^~
